--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 // Main Content
 .main-content {
-    overflow: hidden;
+    //overflow: hidden;
     min-height: 100vh;
     padding: {
         top: 118px;
@@ -107,7 +107,7 @@
             }
         }
     }
-    
+
 }
 
 /* Min width 576px to Max width 767px */
@@ -134,7 +134,7 @@
         }
         &.right-sidebar {
             padding-right: 25px;
-            
+
             &.active, &.hide-sidebar {
                 padding-right: 25px;
             }
@@ -228,7 +228,7 @@
     // Main Content
     .main-content {
         padding-left: 262px;
-        
+
         &.active, &.hide-sidebar {
             padding-left: 85px;
         }
