--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,9 +1,1 @@
-<footer
-    class="footer-area text-center bg-white border-top-radius"
-    [class.card-borderd-theme]="themeService.isCardBorder()"
-    [class.component-dark-theme]="themeService.isDark()"
->
-    <p>
-        © <span class="text-black fw-medium">Developed and Maintained by </span> <a href="" target="_blank"> Company Name</a>
-    </p>
-</footer>
+<app-main-footer></app-main-footer>
