--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,32 +1,106 @@
-<header
-    class="header-area bg-white border-radius transition"
-    [ngClass]="{'active': isSidebarToggled, 'sticky': isSticky}"
-    [class.component-dark-theme]="themeService.isDark()"
-    [class.right-sidebar]="themeService.isRightSidebar()"
-    [class.hide-sidebar]="themeService.isHideSidebar()"
-    [class.dark-header]="themeService.isHeaderDark()"
-    [class.card-borderd-theme]="themeService.isCardBorder()"
-    [class.rtl-enabled]="themeService.isRTLEnabled()"
->
-    <div class="d-md-flex align-items-center justify-content-between">
-        <div class="header-left-side d-flex align-items-center">
-            <div
-                class="burger-menu cursor-pointer transition d-xl-none"
-                [ngClass]="{'active': isSidebarToggled}"
-                (click)="toggle()"
-            >
-                <span class="top-bar d-block bg-black transition"></span>
-                <span class="middle-bar d-block bg-black transition"></span>
-                <span class="bottom-bar d-block bg-black transition"></span>
+<header class="main-header">
+    <div class="container">
+        <div class="header-inner">
+            <a href="index.html" class="logo-holder"><img src="assets/images/logo.png" alt=""></a>
+            <div class="nav-holder main-menu">
+                <nav>
+                    <ul class="no-list-style">
+                        <li>
+                            <a href="#" class="act-link">Home <i class="fa-solid fa-caret-down"></i></a>
+                            <ul>
+                                <li><a href="index.html">Slider</a></li>
+                                <li><a href="index2.html">Video</a></li>
+                                <li><a href="index3.html">Slideshow</a></li>
+                                <li><a href="index4.html">Parallax Image</a></li>
+                                <li><a href="dashboard.html">User Dasboard</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Listings <i class="fa-solid fa-caret-down"></i></a>
+                            <ul>
+                                <li><a href="listing.html">Style 1</a></li>
+                                <li><a href="listing2.html">Style 2</a></li>
+                                <li><a href="listing3.html">Style 3</a></li>
+                                <li><a href="listing4.html">Style 4</a></li>
+                                <li>
+                                    <a href="#">Single <i class="fa-solid fa-caret-right"></i></a>
+                                    <ul>
+                                        <li><a href="listing-single.html">Style 1</a></li>
+                                        <li><a href="listing-single2.html">Style 2</a></li>
+                                        <li><a href="listing-single3.html">Style 3</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="blog.html">News</a>
+                        </li>
+                        <li>
+                            <a href="#">Pages <i class="fa-solid fa-caret-down"></i></a>
+                            <ul>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="contacts.html">Contacts</a></li>
+                                <li><a href="agent-single.html">Agent single</a></li>
+                                <li><a href="help.html">How it Works</a></li>
+                                <li><a href="pricing.html">Pricing</a></li>
+                                <li><a href="blog-single.html">Blog Single</a></li>
+                                <li><a href="add-listing.html">Add Listing</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <form class="search-box position-relative">
-                <i class="material-symbols-outlined">
-                    search
-                </i>
-                <input type="text" class="input-search d-block w-100 border-none outline-0" placeholder="Search here...">
-            </form>
+            <div class="nav-button-wrap">
+                <div class="nav-button">
+                    <span></span><span></span><span></span>
+                </div>
+            </div>
+            <div class="header-search-btn tolt" data-microtip-position="bottom"  data-tooltip="Search"><i class="fa-regular fa-magnifying-glass"></i> </div>
+            <a href="/add-property" class="header-btn"><span>Add Your Property</span></a>
+            <div class="wish_btn swl_btn tolt" data-microtip-position="bottom"  data-tooltip="Wishlist">
+                <div class="wish_btn-item"><i class="fa-thin fa-heart"></i><span class="wish_count">3</span></div>
+            </div>
+            <div class="show-reg-form modal-open"><i class="fa-thin fa-user"></i><span>Sign In</span></div>
+            <div class="header-search-wrap novis_search">
+                <div class="header-search">
+                    <div class="header-search-nav">
+                        <div class="header-search-nav_container">
+                            <div class="header-search-radio">
+                                <input class="hidden radio-label" type="radio" name="accept-offers" id="sale-button" checked="checked">
+                                <label class="button-label" for="sale-button">Sale</label>
+                                <input class="hidden radio-label" type="radio" name="accept-offers" id="rent-button">
+                                <label class="button-label" for="rent-button">Rent</label>
+                                <input class="hidden radio-label" type="radio" name="accept-offers" id="comm-button">
+                                <label class="button-label" for="comm-button">Commercial</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="header-search-container">
+                        <div class="custom-form">
+                            <div class="cs-intputwrap">
+                                <i class="fa-light fa-house"></i>
+                                <input type="text"   placeholder="Keywords..." value="">
+                            </div>
+                            <div class="cs-intputwrap">
+                                <i class="fa-light fa-location-dot"></i>
+                                <input type="text"   placeholder="Location..." value="">
+                            </div>
+                            <div class="cs-intputwrap">
+                                <div class="price-range-wrap ">
+                                    <label>Price Range</label>
+                                    <div class="price-rage-item">
+                                        <input type="text" class="price-range-double" data-min="100" data-max="100000"  name="price-range1"  data-step="1" value="1" data-prefix="$">
+                                    </div>
+                                </div>
+                            </div>
+                            <button onclick="window.location.href='listing.html'" class="commentssubmit commentssubmit_fw">Search</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <ul class="header-right-side d-flex align-items-center mt-0 mb-0 pl-0 list-unstyled">
-        </ul>
     </div>
 </header>
+<div class="body-overlay fs-wrapper search-form-overlay close-search-form"></div>
+<app-auth-popup></app-auth-popup>
+<app-wish-list-popup></app-wish-list-popup>
